# ingest

./: .gitignore  Cargo.toml
src/: errors.rs  lib.rs  main.rs  traits.rs
src/ingest/: async.rs  mod.rs  sync.rs
