[package]
name = "ingest"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
fs2 = "0.4.3"
thiserror = "1.0.32"
walkdir = "2.3.2"
tokio = { version = "1.20.1", features = ["fs", "rt", "macros", "rt-multi-thread"], optional = true }
futures = "0.3.21"

[features]
sync = []
async = ["dep:tokio"]
default = ["async"]
